Fix some missing colors when using a light theme (#31)

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,7 +1,5 @@
 @import './key-board-shortcut';
-.bg-dark {
-  background-color: $backgroundColor;
-}
+
 .border-bottom-light {
   border-bottom: 1px solid $neutral-alpha-30;
 }
@@ -88,5 +86,5 @@
   }
 }
 .dark-background {
-  background-color: var(--background-color, rgba(255, 255, 255, 1));
+  background-color: var(--palette-black-alpha-4, rgba(0, 0, 0, 0.04));
 }
