--- a/src/work-hub/index.scss
+++ b/src/work-hub/index.scss
@@ -6,7 +6,7 @@
 @include extension-container('work-hub-container');
 
 thead {
-  background-color: var(--background-color, rgba(255, 255, 255, 1));
+  background-color: var(--palette-black-alpha-4, rgba(0, 0, 0, 0.04));
 }
 
 .settings-tab-list {
